--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,8 +4,27 @@
 
   .container {
     padding: 0px 50px;
-    img {
-      height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
+
+    .left {
+      display: flex;
+      align-items: center;
+      img {
+        height: 25px;
+      }
+    }
+
+    .right {
+      display: flex;
+      align-items: center;
+      img {
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+      }
     }
   }
 }
