--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -14,16 +14,29 @@
       align-items: center;
       img {
         height: 25px;
+        margin-right: 40px;
+      }
+      span {
+        margin-right: 20px;
+        cursor: pointer;
       }
     }
 
     .right {
       display: flex;
       align-items: center;
+
+      .icon {
+        margin: 0px 15px;
+        cursor: pointer;
+      }
+
       img {
         width: 30px;
         height: 30px;
         border-radius: 5px;
+        object-fit: cover;
+        cursor: pointer;
       }
     }
   }
