--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -38,6 +38,27 @@
         object-fit: cover;
         cursor: pointer;
       }
+
+      .profile {
+        .options {
+          display: none;
+          background-color: var(--main-color);
+          border-radius: 5px;
+        }
+
+        span {
+          padding: 10px;
+          cursor: pointer;
+        }
+
+        &:hover {
+          .options {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+          }
+        }
+      }
     }
   }
 }
