--- a/src/components/listItem/listItem.scss
+++ b/src/components/listItem/listItem.scss
@@ -5,10 +5,20 @@
   margin-right: 5px;
   overflow: hidden;
   cursor: pointer;
+  color: white;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &:hover {
+    width: 325px;
+    height: 300px;
+
+    img {
+      height: 140px;
+    }
   }
 }
