--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -57,5 +57,33 @@
     p {
       font-size: 20px;
     }
+
+    .input {
+      width: 50%;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 20px;
+      height: 50px;
+      border-radius: 5px;
+
+      input {
+        flex: 9;
+        height: 100%;
+        border: none;
+        padding: 0 10px;
+      }
+
+      .registerButton {
+        flex: 3;
+        height: 100%;
+        background-color: red;
+        border: none;
+        color: white;
+        font-size: 22px;
+        cursor: pointer;
+      }
+    }
   }
 }
