--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -23,6 +23,11 @@
     }
   }
 
+  b {
+    color: white;
+    cursor: pointer;
+  }
+
   .container {
     width: 100%;
     height: 100%;
@@ -48,7 +53,6 @@
       input {
         height: 40px;
         border-radius: 5px;
-        background-color: gray;
         color: white;
         padding-left: 10px;
 
@@ -70,9 +74,6 @@
 
       span {
         color: lightgray;
-        b {
-          color: white;
-        }
       }
     }
   }
