--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -53,7 +53,7 @@
       input {
         height: 40px;
         border-radius: 5px;
-        color: white;
+        color: var(--main-color);
         padding-left: 10px;
 
         &::placeholder {
