styling for mobile and show admin link for admin

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -58,6 +58,22 @@
         cursor: pointer;
       }
 
+      .iconHide {
+        @include tablet {
+          display: none;
+        }
+      }
+
+      span {
+        cursor: pointer;
+
+        &.navbarmainLinks {
+          @include tablet {
+            display: block;
+          }
+        }
+      }
+
       img {
         width: 30px;
         height: 30px;
