--- a/admin/src/pages/listList/listList.css
+++ b/admin/src/pages/listList/listList.css
@@ -7,6 +7,17 @@
   align-items: center;
 }
 
+.productAddButton {
+  width: 80px;
+  border: none;
+  padding: 5px;
+  background-color: teal;
+  color: white;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 .productListImg {
   width: 32px;
   height: 32px;
