--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -7,6 +7,10 @@
   text-decoration: none;
 }
 
+body {
+  background-color: var(--main-color);
+}
+
 @mixin tablet {
   @media (max-width: 768px) {
     @content;
